# dotfiles

./: .bash_aliases  .bash_profile  .bashrc  .gitconfig  .gitignore  .inputrc  .update  LICENSE
.config/: .gitignore
.config/bash/: aliases
.config/cabal/: config
.config/cloc/: options.txt
.config/cmus/: rc
.config/fcitx5/: config  profile
.config/fish/: .gitignore  aliases.fish  config.fish  fish_variables  shell-gamble.fish  tiny-cat.lua
.config/fourmolu/: fourmolu.yaml
.config/git/: config
.config/gtk-3.0/: bookmarks  settings.ini
.config/hypr/: hypridle.conf  hyprland.conf  hyprlock.conf
.config/i3/: config
.config/i3status/: config
.config/keepassxc/: keepassxc.ini
.config/kitty/: kitty.conf
.config/mako/: config
.config/nvim/: .gitignore  init.lua
.config/sway/: config  menu.sh  parse-desktop-entry.awk  toggle-window-action.sh
.config/swayidle/: config
.config/swaylock/: config
.config/waybar/: base.json  base.jsonc  config  config.jsonc  style.css
.config/wofi/: config  style.css
.dotfiles/: arch.sh  doasedit.sh  install.sh  man.sh  merge-firefox-config.sh  music-sync.sh  setup-user.sh  stop-and-shutdown.hs  stop-and-shutdown.sh  swap-background.hs  swap-background.sh  typst-to-fcitx5.hs  typst-to-fcitx5.sh  user-updates.sh
.dotfiles/defaults/: sway-config  update.sh
.dotfiles/install/: 25-wireless.network  doas.conf  grub  (+12 more)
.dotfiles/swap-background/: swap-background.cabal  swap-background.hs
.dotfiles/swap-background/app/: Main.hs
.minecraft/: options.txt  optionsof.txt
.mozilla/: .gitignore
docs/: README.md
(+101 files in other folders)
