cabal-version: 2.4
name:          swap-background
version:       0

executable swap-background
    main-is:          Main.hs
    build-depends:
        , aeson
        , base
        , dir-traverse
        , directory
        , distributive
        , extra
        , filepath
        , process
        , random
        , transformers
        , utf8-string

    ghc-options:      -Wall
    hs-source-dirs:   app
    default-language: Haskell2010
