cabal-version: 2.4
name:          swap-background
version:       0

executable swap-background
    main-is:          Main.hs
    build-depends:
        , base          ^>=4.15.1.0
        , dir-traverse  ^>=0.2.3.0
        , directory     ^>=1.3.6.2
        , distributive  ^>=0.6.2.1
        , extra         ^>=1.7.14
        , filepath      ^>=1.4.2.1
        , process       ^>=1.6.13.2
        , random        ^>=1.2.1.1
        , transformers  ^>=0.5.6.2
        , utf8-string   ^>=1.0.2

    ghc-options:      -Wall
    hs-source-dirs:   app
    default-language: Haskell2010
